# camlidar

./: .gitignore  CMakeLists.txt  README.md
data/3plane/: init.yaml  left.yaml  lidar.pcd
data/3plane2/: init.yaml  lidar.pcd  plane0000.pcd  plane00000.pcd  plane00001.pcd  plane00002.pcd  plane0001.pcd  plane0002.pcd  test.pcd
data/visensor/: left.yaml  ost.txt  right.yaml
data/waterloo/: left.yaml  ost.txt  right.yaml
data/zed/: calib_cam_to_cam.txt
data/zjudata/: ost.txt  right.yaml
src/: imgrect_3p.cpp  imgrect_vi.cpp  imgrect_waterloo.cpp  imgrect_zed.cpp  imgrect_zjudata.cpp  main_camlidar.cpp  main_gtsam.cpp
src/dataprocess/: imgRect.cpp  imgRect.h  initData.cpp  initData.h  pclProc.cpp  pclProc.h
src/factor/: BetweenCalibFactor.cpp  BetweenCalibFactor.h  PlaneCalibMapFactor.h  StereoCalibMapFactor.cpp  StereoCalibMapFactor.h  StereoMapFactor.h
